# app_starter_gui

./: .pdm-python  README.md  buttons.yaml  core.html  core.html.md  css.html  css.html.md  gradio_app.html  gradio_app.html.md  gradio_app.py  index.html  index.html.md  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  test.ipynb  test_buttons.yaml
app_starter_gui/: core.py  css.py  gradio_app.py
nbs/: 00_core.ipynb  01_css.ipynb  02_gradio_app.ipynb  index.ipynb  nbdev.yml  sidebar.yml  test.py
src/app_starter_gui/: _modidx.py  gradio_app.py
